Add relative links

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My TOP Recipes</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My TOP Recipes</title>
 </head>
 
 <body>
-    
+    <h1>TOP Recipes</h1>
+    <img src="https://www.123rf.com/photo_21350157_charming-young-male-chef-in-white-uniform.html" alt="Cheff">
+
+    <a href="recipes/pancakes.html" rel="noopener noreferrer">Pancakes</a>
+    <a href="recipes/burger.html" rel="noopener noreferrer">Burgers</a>
+    <a href="recipes/cheesecake.html" rel="noopener noreferrer">Cheesecake</a>
+  
 </body>
 </html>
