--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -2,12 +2,13 @@
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Burgers</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Burgers</title>
 </head>
 
 <body>
-    
+  <h1>Burgers</h1>
+  <a href="index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
