repair relative links

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -9,6 +9,6 @@
 
 <body>
     <h1>Pancakes</h1>
-    <a href="index.html" rel="noopener noreferrer">Home</a>
+    <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
