--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -9,6 +9,6 @@
 
 <body>
   <h1>Cheesecake</h1>
-  <a href="index.html" rel="noopener noreferrer">Home</a>
+  <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
