add images to all pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>TOP Recipes</h1>
-    <img src="https://www.123rf.com/photo_21350157_charming-young-male-chef-in-white-uniform.html" alt="Cheff">
+    <img src="images/pexels-miquel-ferran-gomez-figueroa-3814446.jpg" alt="Cheff">
 
     <a href="recipes/pancakes.html" rel="noopener noreferrer">Pancakes</a>
     <a href="recipes/burger.html" rel="noopener noreferrer">Burgers</a>
