--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>Burgers</h1>
+  <img src="../images/burger.webp" alt="Burger">
   <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
