--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -9,6 +9,7 @@
 
 <body>
   <h1>Cheesecake</h1>
+  <img src="../images/Best-Cheesecake-Recipe-2-1-of-1-7.webp" alt="Cheesecake">
   <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
