--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Pancakes</h1>
+    <img src="../images/21014-Good-old-Fashioned-Pancakes-mfs_001-1fa26bcdedc345f182537d95b6cf92d8.webp" alt="Pancakes">
     <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
