add ingredients and steps to each recipe page

--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -10,6 +10,29 @@
 <body>
   <h1>Burgers</h1>
   <img src="../images/burger.webp" alt="Burger">
+  
+  <h3>Description</h3>
+  <p>This is the recipe for the best hamburger in the entire world!</p>
+  
+  <h3>Ingredients</h3>
+  <ul>
+    <li>ground beef</li>
+    <li>egg</li>
+    <li>bread crumbs</li>
+    <li>evaporated milk</li>
+    <li>Worcestershire sauce</li>
+    <li>cayenne pepper</li>
+    <li>garlic</li>
+  </ul>
+  
+  <h3>Steps</h3>
+  <ol>
+    <li>Gather ingredients.</li>
+    <li>Preheat grill.</li>
+    <li>Combine ingredients.</li>
+    <li>Grill burgers.</li>
+  </ol>
+  
   <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
