--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 
 <body>
-    <h1>TOP Recipes</h1>
-    <img src="images/pexels-miquel-ferran-gomez-figueroa-3814446.jpg" alt="Cheff">
+  <h1>TOP Recipes</h1>
+  <img src="images/pexels-miquel-ferran-gomez-figueroa-3814446.jpg" alt="Cheff">
 
-    <a href="recipes/pancakes.html" rel="noopener noreferrer">Pancakes</a>
-    <a href="recipes/burger.html" rel="noopener noreferrer">Burgers</a>
-    <a href="recipes/cheesecake.html" rel="noopener noreferrer">Cheesecake</a>
-  
+  <ul>
+    <li><a href="recipes/pancakes.html" rel="noopener noreferrer">Pancakes</a></li>
+    <li><a href="recipes/burger.html" rel="noopener noreferrer">Burgers</a></li>
+    <li><a href="recipes/cheesecake.html" rel="noopener noreferrer">Cheesecake</a></li>
+  </ul>
+
 </body>
 </html>
