--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -10,6 +10,27 @@
 <body>
   <h1>Cheesecake</h1>
   <img src="../images/Best-Cheesecake-Recipe-2-1-of-1-7.webp" alt="Cheesecake">
+
+  <h3>Description</h3>
+  <p>This is the recipe for the best cheesecake in the entire world!</p>
+  
+  <h3>Ingredients</h3>
+  <ul>
+    <li>cream cheese</li>
+    <li>sugar</li>
+    <li>sour cream</li>
+    <li>vanilla extract</li>
+    <li>salt</li>
+    <li>eggs</li>
+  </ul>
+  
+  <h3>Steps</h3>
+  <ol>
+    <li>Mix cream cheese until smooth.</li>
+    <li>Add sugar.</li>
+    <li>Add remaining ingredients.</li>
+  </ol>
+  
   <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
