--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -10,6 +10,29 @@
 <body>
     <h1>Pancakes</h1>
     <img src="../images/21014-Good-old-Fashioned-Pancakes-mfs_001-1fa26bcdedc345f182537d95b6cf92d8.webp" alt="Pancakes">
+
+  <h3>Description</h3>
+  <p>This is the recipe for the best pancakes in the entire world!</p>
+  
+  <h3>Ingredients</h3>
+  <ul>
+    <li>flour</li>
+    <li>baking Powder</li>
+    <li>sugar</li>
+    <li>salt</li>
+    <li>milk and butter</li>
+    <li>egg</li>
+  </ul>
+  
+  <h3>Steps</h3>
+  <ol>
+    <li>Sift the dry ingredients together.</li>
+    <li>Make a well, then add the wet ingredients. Stir to combine.</li>
+    <li>Scoop the batter onto a hot griddle or pan.</li>
+    <li>Cook for two to three minutes, then flip.</li>
+    <li>Continue cooking until brown on both sides.</li>
+  </ol>
+  
     <a href="../index.html" rel="noopener noreferrer">Home</a>
 </body>
 </html>
